--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Hello world</title>
 </head>
+<!-- Code & Style: https://codepen.io/jh3y/pen/wmpMwp -->
 <div class="envelope">
   <input class="envelope__check" type="checkbox"/>
   <div class="envelope__flap envelope__flap--inside"></div>
